# ctemplate

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  builder.c  builder.h  compiler.c  compiler.h  ctemplate.c  ctemplate.h  date.c  date.h  expression.c  expression.h  filemanager.c  filemanager.h  functions.h  loader.c  loader.h  test.c  translation.c  translation.h  utils.c  utils.h
cmake/: include.cmake
cmake/modules/: FindCSAFESTRING.cmake  FindJSON2MAP.cmake
example/: CMakeLists.txt  example.c  template.html
templates/: template1.html  template2.html
test/: CMakeLists.txt  cchoose.txt  cforeach.txt  cforeachobject.txt  cif.txt  cout.txt  cremove.txt  cset.txt  expression.txt  testcases.c
translation/: CMakeLists.txt  cchoose.c  cchoose.h  cforeach.c  cforeach.h  cif.c  cif.h  cout.c  cout.h  cremove.c  cremove.h  cset.c  cset.h  expression.c  expression.h  expression_builder.c  expression_builder.h  modules.c  modules.h  variable_handler.c  variable_handler.h
utils/: CMakeLists.txt  map.c  map.h
